--- a/app/pom.xml
+++ b/app/pom.xml
@@ -5,7 +5,7 @@
 
 	<parent>
 		<groupId>com.liberty.poker</groupId>
-		<artifactId>poker</artifactId>
+		<artifactId>planning-poker</artifactId>
 		<version>1.0-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
@@ -32,12 +32,6 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
-
 	</dependencies>
 
 	<build>
