--- a/business/pom.xml
+++ b/business/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.liberty.poker</groupId>
-		<artifactId>poker</artifactId>
+		<artifactId>planning-poker</artifactId>
 		<version>1.0-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
