--- a/data-provider/pom.xml
+++ b/data-provider/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.liberty.poker</groupId>
-		<artifactId>poker</artifactId>
+		<artifactId>planning-poker</artifactId>
 		<version>1.0-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
@@ -31,6 +31,11 @@
 		<!--		</dependency>-->
 
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		
+		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
@@ -39,7 +44,7 @@
 		<dependency>
 			<groupId>org.flywaydb</groupId>
 			<artifactId>flyway-core</artifactId>
-			<version>7.5.0</version>
+			<version>8.5.0</version>
 		</dependency>
 	</dependencies>
 </project>
