--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.liberty.poker</groupId>
-	<artifactId>poker</artifactId>
+	<artifactId>planning-poker</artifactId>
 	<version>1.0-SNAPSHOT</version>
-	<name>poker</name>
+	<name>planning-poker</name>
 	<packaging>pom</packaging>
 
 	<parent>
