--- a/business/pom.xml
+++ b/business/pom.xml
@@ -19,10 +19,11 @@
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
 
-<!--		<dependency>-->
-<!--			<groupId>org.springframework.boot</groupId>-->
-<!--			<artifactId>spring-boot-starter-test</artifactId>-->
-<!--			<scope>test</scope>-->
-<!--		</dependency>-->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-tx</artifactId>
+			<version>5.3.15</version>
+		</dependency>
+
 	</dependencies>
 </project>
