--- a/data-provider/pom.xml
+++ b/data-provider/pom.xml
@@ -24,11 +24,11 @@
 			<version>${project.version}</version>
 		</dependency>
 
-		<!--		<dependency>-->
-		<!--			<groupId>org.postgresql</groupId>-->
-		<!--			<artifactId>postgresql</artifactId>-->
-		<!--			<version>42.2.18</version>-->
-		<!--		</dependency>-->
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.2.18</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
